<resources>
    <string name="app_name">MyKamus</string>
    <string name="home">Beranda</string>
    <string name="kamus">Kamus</string>
    <string name="kamus_id">Kamus Indonesia - Inggris</string>
    <string name="kamus_eng">Kamus Inggris - Indonesia</string>
    <string name="audio">Audio</string>
    <string name="audio1">Teks Audio</string>
    <string name="mykamus_des">adalah aplikasi kamus offline lengkap berbasis android. Kamus tersedia dalam bahasa Indonesia - Inggris dan Inggris - Indonesia. Terdapat juga fitur mendengarkan teks dalam bahasa Inggris atau Indonesia (Memerlukan Koneksi Internet).</string>
    <string name="kamus_des">Cari dan temukan arti kata dalam bahasa Inggris dan Indonesia.</string>
    <string name="audio_des">Dengarkan teks yang diketik dalam bahasa Inggris dan Indonesia.</string>
    <string name="about_des">
        Minimal Android OS : Marshmellow
        \nMemerlukan Google TTS (audio)
        \nVersi Aplikasi : 1.0
        \n
    </string>
    <string name="tips">Tips</string>
    <string name="tips_des">Gunakan navigasi dibawah untuk berganti halaman dengan cepat.</string>
    <string name="teks">Teks</string>
    <string name="hint">Ketik disini</string>
    <string name="about">Tentang Aplikasi</string>
    <string name="pilih">Pilih Bahasa</string>
    <string name="play">Putar</string>
    <string name="inggris_indo">Inggris - Indonesia</string>
    <string name="indo_inggris">Indonesia - Inggris</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="pencarian">Pencarian kata</string>
    <string-array name="bahasa">
        <item>Inggris</item>
        <item>Indonesia</item>
    </string-array>
</resources>