<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/title_audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="50sp"
                android:text="@string/audio1" />

            <TextView
                android:id="@+id/txt_deskripsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@id/title_audio"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:text="@string/teks" />

            <View style="@style/Divider"
                android:id="@+id/divider"
                android:layout_marginTop="5dp"
                android:layout_below="@id/txt_deskripsi" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:background="@color/black">

                <EditText
                    android:id="@+id/editText_audio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/textBox"
                    android:gravity="start"
                    android:hint="@string/hint"
                    android:minHeight="150dp"
                    android:padding="4dp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txt_bahasa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_view_text"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:text="@string/pilih" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/txt_bahasa"
                android:layout_marginTop="5dp"
                android:entries="@array/bahasa"
                android:spinnerMode="dropdown" />

            <View style="@style/Divider"
                android:id="@+id/divider1"
                android:layout_marginTop="5dp"
                android:layout_below="@id/spinner" />

            <ImageView
                android:id="@+id/audio_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@id/divider1"
                android:layout_marginTop="25dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_baseline_audiotrack_24" />

            <Button
                android:id="@+id/btn_audio"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/audio_icon"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:textColor="@color/colorAccent"
                android:text="@string/play" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>