<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_margin="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/kamus_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_baseline_book_24" />

                <TextView
                    android:id="@+id/kamus_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/kamus_icon"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="50sp"
                    android:text="@string/kamus" />

                <View style="@style/Divider"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/kamus_icon" />

                <TextView
                    android:id="@+id/kamus_deskripsi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/kamus_icon"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:text="@string/kamus_des" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_margin="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/audio_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_baseline_audiotrack_24" />

                <TextView
                    android:id="@+id/audio_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/audio_icon"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="50sp"
                    android:text="@string/audio1" />

                <View style="@style/Divider"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/audio_icon" />

                <TextView
                    android:id="@+id/audio_deskripsi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/audio_icon"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:text="@string/audio_des" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_margin="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/info_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_baseline_info_24" />

                <TextView
                    android:id="@+id/info_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/info_icon"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="50sp"
                    android:text="@string/tips" />

                <View style="@style/Divider"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/info_icon" />

                <TextView
                    android:id="@+id/info_deskripsi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/info_icon"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:text="@string/tips_des" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</ScrollView>